Article card middle spacing fixed

--- a/app/assets/stylesheets/components/_articlecard.scss
+++ b/app/assets/stylesheets/components/_articlecard.scss
@@ -9,12 +9,14 @@
     height: 100%;
     width: 50%;
     object-fit: cover;
+    margin-left: 1rem;
   }
 }
 
 .article-info{
   width: 50%;
   height: 100%;
+  margin-right: 1rem;
 
   ul{
     list-style: none;
